--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hola</title>
+    <title>BDD</title>
 </head>
 <body>
-    <h1>Hola mundo</h1>
-    <br> 
+    <h2>Agregar:</h2> 
     <form action="#" id="crud_form">
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre">
@@ -16,7 +15,9 @@
         <button type="button" onclick="crearRegistro()">Crear</button>
         <button type="button" onclick="eliminarRegistros()">Eliminar Todo</button>
     </form>
-
+    <br>
+    <br>
+    <h1>Base de datos en Firebase</h1>
     <table border="1">
         <thead>
             <tr>
