--- a/index.html
+++ b/index.html
@@ -28,10 +28,83 @@
     </table>
 
     <script type="module">
-        // ... (código anterior)
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js";
+        import { getDatabase, ref, push, onValue, remove, update } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-database.js";
+
+        const firebaseConfig = {
+          apiKey: "AIzaSyDDiEZK38IT1kbRMudw5xrCXfNvvHaJzkQ",
+          authDomain: "programa-db163.firebaseapp.com",
+          databaseURL: "https://programa-db163-default-rtdb.firebaseio.com",
+          projectId: "programa-db163",
+          storageBucket: "programa-db163.appspot.com",
+          messagingSenderId: "110010089612",
+          appId: "1:110010089612:web:a8a47a493c9f766a96fba9"
+        };
+
+        const app = initializeApp(firebaseConfig);
+        const database = getDatabase(app);
+
+        window.crearRegistro = function () {
+            const nombre = document.getElementById("nombre").value;
+            const edad = document.getElementById("edad").value;
+
+            push(
+                ref(database, 'septimo'),
+                {
+                    name: nombre,
+                    age: edad 
+                }
+            );
+        }
 
         window.mostrarRegistros = function () {
-            // ... (código anterior)
+            const tablaRegistros = document.getElementById("tablaRegistros");
+            tablaRegistros.innerHTML = "";
+
+            const septimoRef = ref(database, 'septimo');
+            onValue(septimoRef, (snapshot) => {
+                snapshot.forEach((childSnapshot) => {
+                    const key = childSnapshot.key;
+                    const data = childSnapshot.val();
+
+                    const fila = document.createElement("tr");
+
+                    const celdaNombre = document.createElement("td");
+                    celdaNombre.textContent = data.name;
+
+                    const celdaEdad = document.createElement("td");
+                    celdaEdad.textContent = data.age;
+
+                    const celdaAcciones = document.createElement("td");
+
+                    const botonEditar = document.createElement("button");
+                    botonEditar.textContent = "Editar";
+                    botonEditar.addEventListener("click", () => {
+                        const nuevoNombre = prompt("Ingrese el nuevo nombre:", data.name);
+                        const nuevaEdad = prompt("Ingrese la nueva edad:", data.age);
+
+                        update(ref(septimoRef, key), {
+                            name: nuevoNombre,
+                            age: nuevaEdad
+                        });
+                    });
+
+                    const botonEliminar = document.createElement("button");
+                    botonEliminar.textContent = "Eliminar";
+                    botonEliminar.addEventListener("click", () => {
+                        remove(ref(septimoRef, key));
+                    });
+
+                    celdaAcciones.appendChild(botonEditar);
+                    celdaAcciones.appendChild(botonEliminar);
+
+                    fila.appendChild(celdaNombre);
+                    fila.appendChild(celdaEdad);
+                    fila.appendChild(celdaAcciones);
+
+                    tablaRegistros.appendChild(fila);
+                });
+            });
         }
 
         // Mostrar los registros al cargar la página
