--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hola</title>
+    <title>BDD</title>
 </head>
 <body>
-    <h1>Hola mundo</h1>
-    <br> 
+    <h1>Agregar:</h1>
     <form action="#" id="crud_form">
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre">
         <label for="edad">Edad</label>
         <input type="number" id="edad">
-        <button type="button" onclick="crearRegistro()">Crear</button>
+        <button type="button" onclick="crearRegistro()">Agregar</button>
     </form>
-
+    <h1>Hola mundo</h1>
+    <br>
+    <br>
     <table border="1">
         <thead>
             <tr>
