--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         import { getDatabase, ref, push, onValue, remove, update } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-database.js";
 
         const firebaseConfig = {
-          apiKey: "AIzaSyDDiEZK38IT1kbRMudw5xrCXfNvvHaJzkQ",
-          authDomain: "programa-db163.firebaseapp.com",
-          databaseURL: "https://programa-db163-default-rtdb.firebaseio.com",
-          projectId: "programa-db163",
-          storageBucket: "programa-db163.appspot.com",
-          messagingSenderId: "110010089612",
-          appId: "1:110010089612:web:a8a47a493c9f766a96fba9"
+            apiKey: "AIzaSyDDiEZK38IT1kbRMudw5xrCXfNvvHaJzkQ",
+            authDomain: "programa-db163.firebaseapp.com",
+            databaseURL: "https://programa-db163-default-rtdb.firebaseio.com",
+            projectId: "programa-db163",
+            storageBucket: "programa-db163.appspot.com",
+            messagingSenderId: "110010089612",
+            appId: "1:110010089612:web:a8a47a493c9f766a96fba9"
         };
 
         const app = initializeApp(firebaseConfig);
@@ -84,7 +84,11 @@
                         const nuevoNombre = prompt("Ingrese el nuevo nombre:", data.name);
                         const nuevaEdad = prompt("Ingrese la nueva edad:", data.age);
 
-                        update(ref(septimoRef, key), {
+                        // Obtener referencia específica para el registro que queremos actualizar
+                        const registroRef = ref(septimoRef, key);
+
+                        // Utilizar la función update en la referencia específica
+                        update(registroRef, {
                             name: nuevoNombre,
                             age: nuevaEdad
                         });
