--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <input type="number" id="edad">
         <button type="button" onclick="crearRegistro()">Agregar</button>
     </form>
-    <h1>Base de datos en Firebase</h1>
+    <h1>Base de datos en Firebase :)</h1>
     <br>
     <br>
     <table border="1">
