--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <input type="number" id="edad">
         <button type="button" onclick="crearRegistro()">Agregar</button>
     </form>
-    <h1>Base de datos en Firebase :</h1>
+    <h1>Base de datos en Firebase :)</h1>
     <br>
     <br>
     <table border="1">
@@ -81,19 +81,23 @@
                     const botonEditar = document.createElement("button");
                     botonEditar.textContent = "Editar";
                     botonEditar.addEventListener("click", () => {
-                        const nuevoNombre = prompt("Ingrese el nuevo nombre:", data.name1);
-                        const nuevaEdad = prompt("Ingrese la nueva edad:", data.age1);
+                        const nuevoNombre = prompt("Ingrese el nuevo nombre:", data.name);
+                        
+                        // Verificar si el usuario ingresó un nuevo nombre
+                        if (nuevoNombre !== null) {
+                            const nuevaEdad = prompt("Ingrese la nueva edad:", data.age);
 
-                        // Verificar si el usuario ingresó un nuevo nombre y una nueva edad
-                        if (nuevoNombre !== null && nuevaEdad !== null) {
-                            // Obtener referencia específica para el registro que queremos actualizar
-                            const registroRef = ref(septimoRef, key);
+                            // Verificar si el usuario ingresó una nueva edad
+                            if (nuevaEdad !== null) {
+                                // Obtener referencia específica para el registro que queremos actualizar
+                                const registroRef = ref(septimoRef, key);
 
-                            // Utilizar la función update en la referencia específica
-                            update(registroRef, {
-                                name1: nuevoNombre,
-                                age1: nuevaEdad
-                            });
+                                // Utilizar la función update en la referencia específica
+                                update(registroRef, {
+                                    name: nuevoNombre,
+                                    age: nuevaEdad
+                                });
+                            }
                         }
                     });
                     const botonEliminar = document.createElement("button");
