--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <input type="number" id="edad">
         <button type="button" onclick="crearRegistro()">Agregar</button>
     </form>
-    <h1>Base de datos en Firebase :)</h1>
+    <h1>Base de datos en Firebase :</h1>
     <br>
     <br>
     <table border="1">
@@ -97,10 +97,13 @@
                                     const registroRef = ref(septimoRef, key);
 
                                     // Utilizar la función update en la referencia específica
-                                    update(registroRef, {
-                                        name: nuevoNombreTrimmed,
-                                        age: nuevaEdad
-                                    });
+                                    update(
+                                        ref(database, 'septimo'),
+                                        {
+                                            name: nombre,
+                                            age: edad 
+                                        }
+                                    );
                                 }
                             }
                         }
