--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <input type="number" id="edad">
         <button type="button" onclick="crearRegistro()">Agregar</button>
     </form>
-    <h1>Base de datos en Firebase :</h1>
+    <h1>Base de datos en Firebase :)</h1>
     <br>
     <br>
     <table border="1">
@@ -71,44 +71,18 @@
                     const fila = document.createElement("tr");
 
                     const celdaNombre = document.createElement("td");
-                    celdaNombre.textContent = data.name;
+                    const labelNombre = document.createElement("label");
+                    labelNombre.textContent = data.name;
+                    labelNombre.style.cursor = "pointer";
+                    labelNombre.addEventListener("click", () => {
+                        editarRegistro(key, data);
+                    });
+                    celdaNombre.appendChild(labelNombre);
 
                     const celdaEdad = document.createElement("td");
                     celdaEdad.textContent = data.age;
 
                     const celdaAcciones = document.createElement("td");
-
-                    const botonEditar = document.createElement("button");
-                    botonEditar.textContent = "Editar";
-                    botonEditar.addEventListener("click", () => {
-                        const nuevoNombre = prompt("Ingrese el nuevo nombre:", data.name);
-
-                        // Verificar si el usuario ingresó un nuevo nombre y no está vacío
-                        if (nuevoNombre !== null) {
-                            const nuevoNombreTrimmed = nuevoNombre.trim();  // Eliminar espacios en blanco al inicio y al final
-
-                            // Verificar si el nuevo nombre no está vacío después de quitar espacios en blanco
-                            if (nuevoNombreTrimmed !== "") {
-                                const nuevaEdad = prompt("Ingrese la nueva edad:", data.age);
-
-                                // Verificar si el usuario ingresó una nueva edad y no está vacía
-                                if (nuevaEdad !== null && nuevaEdad.trim() !== "") {
-                                    // Obtener referencia específica para el registro que queremos actualizar
-                                    const registroRef = ref(septimoRef, key);
-
-                                    // Utilizar la función update en la referencia específica
-                                    update(
-                                        ref(database, 'septimo'),
-                                        {
-                                            name: nuevoNombre,
-                                            age: nuevaEdad 
-                                        }
-                                    );
-                                }
-                            }
-                        }
-                    });
-
 
                     const botonEliminar = document.createElement("button");
                     botonEliminar.textContent = "Eliminar";
@@ -116,7 +90,6 @@
                         remove(ref(septimoRef, key));
                     });
 
-                    celdaAcciones.appendChild(botonEditar);
                     celdaAcciones.appendChild(botonEliminar);
 
                     fila.appendChild(celdaNombre);
@@ -126,6 +99,28 @@
                     tablaRegistros.appendChild(fila);
                 });
             });
+        }
+
+        // Función para editar un registro
+        function editarRegistro(key, data) {
+            const nuevoNombre = prompt("Ingrese el nuevo nombre:", data.name);
+
+            // Verificar si el usuario ingresó un nuevo nombre y no está vacío
+            if (nuevoNombre !== null && nuevoNombre.trim() !== "") {
+                const nuevaEdad = prompt("Ingrese la nueva edad:", data.age);
+
+                // Verificar si el usuario ingresó una nueva edad y no está vacía
+                if (nuevaEdad !== null && nuevaEdad.trim() !== "") {
+                    // Obtener referencia específica para el registro que queremos actualizar
+                    const registroRef = ref(septimoRef, key);
+
+                    // Utilizar la función update en la referencia específica
+                    update(registroRef, {
+                        name: nuevoNombre.trim(),
+                        age: nuevaEdad.trim()
+                    });
+                }
+            }
         }
 
         // Mostrar los registros al cargar la página
