--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <input type="number" id="edad">
         <button type="button" onclick="crearRegistro()">Agregar</button>
     </form>
-    <h1>Base de datos en Firebase</h1>
+    <h1>Base de datos en Firebase :</h1>
     <br>
     <br>
     <table border="1">
@@ -85,7 +85,7 @@
                         const nuevaEdad = prompt("Ingrese la nueva edad:", data.age);
 
                         // Obtener referencia específica para el registro que queremos actualizar
-                        const registroRef = ref(septimoRef, key);
+                        const registroRef = ref(septimoRef.child(key));
 
                         // Utilizar la función update en la referencia específica
                         update(registroRef, {
@@ -97,7 +97,11 @@
                     const botonEliminar = document.createElement("button");
                     botonEliminar.textContent = "Eliminar";
                     botonEliminar.addEventListener("click", () => {
-                        remove(ref(septimoRef, key));
+                        // Obtener referencia específica para el registro que queremos eliminar
+                        const registroRef = ref(septimoRef.child(key));
+
+                        // Utilizar la función remove en la referencia específica
+                        remove(registroRef);
                     });
 
                     celdaAcciones.appendChild(botonEditar);
