--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <input type="number" id="edad">
         <button type="button" onclick="crearRegistro()">Agregar</button>
     </form>
-    <h1>Base de datos en Firebase:</h1>
+    <h1>Base de datos en Firebase</h1>
     <br>
     <br>
     <table border="1">
@@ -84,14 +84,14 @@
                         const nombre = prompt("Ingrese el nuevo nombre:", data.name);
                         const edad = prompt("Ingrese la nueva edad:", data.age);
 
-                        // Obtener referencia específica para el registro que queremos actualizar
-                        const registroRef = ref(database, 'septimo', key);
-
                         // Utilizar la función update en la referencia específica
-                        update(registroRef, {
-                            name: nombre,
-                            age: edad
-                        });
+                        update(
+                            ref(database, 'septimo'),
+                            {
+                                name: nombre,
+                                age: edad 
+                            }
+                        );
                     });
 
                     const botonEliminar = document.createElement("button");
