--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <input type="number" id="edad">
         <button type="button" onclick="crearRegistro()">Agregar</button>
     </form>
-    <h1>Base de datos en Firebase</h1>
+    <h1>Base de datos en Firebase:</h1>
     <br>
     <br>
     <table border="1">
@@ -68,6 +68,9 @@
                     const key = childSnapshot.key;
                     const data = childSnapshot.val();
 
+                    console.log("Clave:", key);
+                    console.log("Datos:", data);
+
                     const fila = document.createElement("tr");
 
                     const celdaNombre = document.createElement("td");
@@ -83,6 +86,8 @@
                     botonEditar.addEventListener("click", () => {
                         const nuevoNombre = prompt("Ingrese el nuevo nombre:", data.name);
                         const nuevaEdad = prompt("Ingrese la nueva edad:", data.age);
+
+                        console.log("Nuevos datos:", nuevoNombre, nuevaEdad);
 
                         // Obtener la referencia específica para el registro que queremos actualizar
                         const registroRef = ref(database, 'septimo', key);
